# sqlite

./: .gitignore  AGENTS.md  Dockerfile  LICENSE.md  Makefile  Makefile.in  Makefile.linux-gcc  Makefile.linux-generic  Makefile.msc  Makefile.nanvix  NANVIX.md  README-porting  README.md  VERSION  aclocal.m4  apply_changes.py  auto.def  cJSON.h  config.sub  configure  configure.ac  configure~  json_path.c  json_path.h  json_table.c  json_table.h  json_table_demo  main.c  main.mk  main.py  make.bat  manifest  manifest.tags  manifest.uuid  requirements.txt  sqlite3.1  sqlite3.pc.in  sqlite_cfg.h.in  sqlite_cfg.h.in~  z
.fossil-settings/: crlf-glob
.github/workflows/: nanvix-ci.yml
.nanvix/: nanvix.toml  z.py
autoconf/: CMakeLists.txt  Makefile.in  Makefile.msc  README.first  README.txt  auto.def
autoconf/tea/: Makefile.in  README.txt  auto.def  configure  configure.ac  configure.ac.in  pkgIndex.tcl.in  teaish.make.in  teaish.tcl  teaish.tester.tcl.in
autoconf/tea/autosetup/: README.txt  core.tcl  feature-tests.tcl  teaish-core.tcl  teaish-feature-tests.tcl  teaish-tester.tcl  tester.tcl
autoconf/tea/doc/: sqlite3.n
autoconf/tea/tclconfig/: tcl.m4
autoconf/tea/win/: makefile.vc  nmakehlp.c  rules-ext.vc  rules.vc  targets.vc
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
autosetup/: README.md  autosetup  autosetup-config.sub  autosetup-find-tclsh  cc.tcl  default.auto  hwaci-common.tcl  jimsh0.c  proj.tcl  sqlite-config.tcl  system.tcl  tmake.auto  tmake.tcl
autosetup/teaish/: core.tcl  tester.tcl
contrib/: sqlitecon.tcl
doc/: F2FS.txt  begin_concurrent_lcd.md  compile-for-unix.md  compile-for-windows.md  extensible_shell.md  jsonb.md  lemon.html  pager-invariants.txt  shell_extend.html  tcl-extension-testing.md  tcl_extension_intro.md  testrunner.md  vfs-shm.txt  wal-lock.md
ext/: README.md
ext/consio/: console_io.c  console_io.h
ext/expert/: expert1.test  sqlite3expert.c  test_expert.c
ext/fts3/: README.syntax  fts3.c  fts3Int.h  fts3_aux.c  fts3_expr.c  fts3_hash.c  fts3_porter.c  fts3_snippet.c  fts3_term.c  fts3_test.c  fts3_tokenize_vtab.c  fts3_tokenizer.c  fts3_write.c
ext/fts5/: extract_api_docs.tcl  fts5.h  fts5Int.h  fts5_aux.c  fts5_buffer.c  fts5_config.c  fts5_expr.c  fts5_hash.c  fts5_index.c  fts5_main.c  fts5_storage.c  fts5_tcl.c  fts5_test_mi.c  fts5_test_tok.c  fts5_tokenize.c  fts5_unicode2.c  fts5_vocab.c
ext/icu/: README.txt  icu.c
ext/intck/: intck1.test  intck2.test  intck_common.tcl  intckbusy.test  intckcorrupt.test  intckfault.test  sqlite3intck.c  sqlite3intck.h  test_intck.c
ext/jni/: GNUmakefile  README.md
ext/lsm1/: Makefile  lsmInt.h  lsm_ckpt.c  lsm_file.c  lsm_main.c  lsm_shared.c  lsm_sorted.c  lsm_unix.c
ext/misc/: README.md  amatch.c  analyze.c  base64.c  base85.c  bgckpt.c  btreeinfo.c  carray.c  carray.h  cksumvfs.c  closure.c  completion.c  compress.c  csv.c  datacopy.c  dbdump.c  decimal.c  diskused.c  explain.c  fileio.c  fossildelta.c  fuzzer.c  ieee754.c  memstat.c  memvfs.c  nextchar.c  normalize.c  percentile.c  prefixes.c  qpvtab.c  randomjson.c  regexp.c  resfmt-tester.c  resfmt.c  resfmt.h  resfmt.md  scrub.c  series.c  sha1.c  shathree.c  (+18 more)
ext/qrf/: README.md  dev-notes.md  qrf-tester.c  qrf.c  qrf.h  qrf.md
ext/rbu/: rbu11.test  rbuvacuum.test  rbuvacuum2.test  sqlite3rbu.c  sqlite3rbu.h  test_rbu.c
ext/recover/: dbdata.c  recover1.test  recovercorrupt2.test  recovercorrupt3.test  recovercorrupt4.test  recoverpgsz.test  recoverslowidx.test  sqlite3recover.c  test_recover.c
ext/repair/: checkindex.c
ext/rtree/: README  geopoly.c  rtree.c  rtree1.test  rtreeA.test  rtreeB.test  rtreeH.test  rtreeJ.test  rtreecheck.test  rtreedoc.test  rtreedoc2.test  test_rtreedoc.c
ext/session/: changebatch1.test  changeset.c  changesetfuzz1.test  session1.test  session4.test  session9.test  sessionC.test  sessionD.test  sessionG.test  sessionH.test  sessionI.test  session_common.tcl  session_gen.test  sessionalter.test  sessionbig2.test  sessionblob.test  sessionchange.test  sessionchange2.test  sessionconflict.test  sessionconflict2.test  sessiondiff.test  sessionfault.test  sessionfault3.test  sessioninvert.test  sessionnoact.test  sessionnoop2.test  sessionstat1.test  sqlite3changebatch.c  sqlite3session.c  sqlite3session.h  test_session.c
ext/userauth/: user-auth.txt
ext/wasm/: GNUmakefile  README-dist.txt  README.md  (+28 more)
json_utils/: json_table.py  test_json_table.py
mptest/: mptest.c
src/: alter.c  analyze.c  attach.c  auth.c  backup.c  bcrecord.c  bitvec.c  btrecord.c  btree.c  btree.h  btreeInt.h  build.c  callback.c  carray.c  cli_extend.c  complete.c  ctime.c  date.c  dbpage.c  delete.c  expr.c  fault.c  fkey.c  func.c  global.c  hash.c  hash.h  hwtime.h  insert.c  json.c  legacy.c  loadext.c  main.c  malloc.c  mem1.c  mem3.c  mem5.c  memdb.c  mutex.c  mutex.h  (+101 more)
test/: affinity2.test  affinity3.test  aggnested.test  aggorderby.test  all.test  alter.test  alter2.test  alter3.test  alter4.test  alterauth2.test  altercol.test  altercons.test  altercons2.test  alterfault.test  altertab2.test  altertab3.test  altertrig.test  amatch1.test  analyze.test  analyze3.test  analyzeC.test  analyzer1.test  atof1.test  atof2.test  attach.test  auth.test  auth2.test  autoinc.test  autoindex1.test  autoindex3.test  autoindex5.test  avfs.test  avtrans.test  backcompat.test  backup2.test  backup5.test  badutf.test  basexx1.test  bc_common.tcl  bestindex8.test  (+424 more)
tool/: build-all-msvc.bat  build-shell.sh  buildtclext.tcl  cp.tcl  custom.txt  dbtotxt.c  emcc.sh.in  genfkey.README  lemon.c  lempar.c  loadfts.c  mkamalzip.tcl  mkautoconfamal.sh  mkccode.tcl  mkcombo.tcl  mkctimec.tcl  mkfptab.c  mkkeywordhash.c  mkmsvcmin.tcl  mkopcodeh.tcl  mkpragmatab.tcl  mkshellc.tcl  mksqlite3c-noext.tcl  mksqlite3c.tcl  mksqlite3h.tcl  mksqlite3internalh.tcl  mksrczip.tcl  mktoolzip.tcl  mkvsix.tcl  mkwinarm64ec.tcl  omittest.tcl  pagesig.c  renumber-win-thunk.tcl  replace.tcl  restore_jrnl.tcl  showdb.c  showstat4.c  showtmlog.c  showwal.c  soak1.tcl  (+20 more)
vsixtest/: vsixtest.tcl
(+215 files in other folders)
